--- a/css/style.css
+++ b/css/style.css
@@ -19,17 +19,19 @@ h1, h3 {
     text-transform: uppercase;
     letter-spacing: 4px;
     color: #719B43;
-    margin-left: 30px;
+    margin-left: 5px;
     padding: 20px;
 }
 
-h3 {
+#megan {
     text-align: justify;
-    color: #4a4a4a;
+    color: #888E8E;
+    padding: 4px;
+    font-size: 20px;
 }
 
 hr {
-    border-top: 1px solid #3a3a3a;
+    border-top: 1px outset #888E8E;
     width: 100%;
     margin: 5px 0;
 }
@@ -41,8 +43,9 @@ hr {
 }
 #top {
     background: transparent;
-
 }
+    
+
 /*navigation links*/
 
 #menu-bar {
@@ -86,11 +89,15 @@ hr {
     width: 100%;
     overflow: hidden;
     position: relative;
-    margin-left: 10px;}
+    margin-left: 10px;
+    padding-top: 40px;}
+     
 
-#review {
+.reviews {
     font-family: cursive;
-    color: #4a4a4a;
+    color: #888E8E;
+    margin-bottom: 20px;
+    text-align: center;
 }
 
  /*biography and portrait*/
@@ -101,8 +108,9 @@ hr {
      position: relative;
      background-repeat: no-repeat;
      background-size: contain;
-     margin-top: -10%;
+     margin-bottom: -10%;
      margin-left: 20px;
+     text-align: center;
 
  }
  #middle-content {
@@ -114,4 +122,18 @@ hr {
         margin-top: 50px;
         padding: 2%;
         font-family: 'PT Sans Narrow', sans-serif;
+ }
+ #middle-review {
+     font-size: larger;
+     margin-bottom: 20%;
+     background-image: url;
+     height: 600px;
+     width: 50%;
+     position: relative;
+     background-repeat: no-repeat;
+     background-size: contain;
+     margin-bottom: -20%;
+     margin-left: 25%;
+     opacity: 80%;
+     text-align: center;
  }
