--- a/css/style.css
+++ b/css/style.css
@@ -170,19 +170,34 @@ footer > h2 {
     color: #888E8E;
     padding-top: 10%;
 }
+/*book gallery*/
 
-#books1 {
-    background-image: url('../assets/images/farseer.webp');
+.books {
     height: 500px;
-    width: 100%;
+    width: 5%;
     position: inherit;
     background-repeat: no-repeat;
     background-size: 30%;
     margin: 2% 0 0 5%;
 }
-.series {
-   margin-top: 10%;
-   margin-left: 14%;
-   font-family: 'PT Sans Narrow', sans-serif;
-   font-size: larger;
+#series {
+    clear: both;
+    line-height: 0;
+    height: 500px;
+    width: 80%;
+    background-repeat: no-repeat;
+    position: center;
+    background-size: contain;
+    margin: 0 5% 0 15%;
+    opacity: 85%;
+    
+}
+#farseer {
+    font-size: inherit;
+    font-family: inherit;
+    margin-top: 5%;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 5%;
+    text-align: center;
 }
