--- a/css/style.css
+++ b/css/style.css
@@ -98,9 +98,9 @@ hr {
     font-family: 'Nunito', sans-serif;
     text-align: center;
     color: #4a4a4a;
-    margin-bottom: 10%;
     font-weight: bold;
-    margin-top: 10%;
+    margin: 8% 5% 8% 5%;
+    font-size: larger;
 }
 /*biography and portrait*/
 
@@ -119,10 +119,14 @@ hr {
 }
 
 #biography {
-    width: 100%;
-    margin-left: 20px;
-    margin-top: 20px;
     text-align: center;
+    margin-bottom: 8px;
+    
+}
+#robin {
+    text-align: center;
+    margin: 20px;
+    font-size: larger;
 }
  #video {
     display: flex;
@@ -162,7 +166,7 @@ footer > h2 {
 /*book gallery*/
 
 
-#series {
+#castle {
     background-image: url(../assets/images/castle.jpeg);
     height: 600px;
     background-position: center;
@@ -171,7 +175,7 @@ footer > h2 {
     position: relative;
 }
 
-#farseer {
+#summary {
     font-size: inherit;
     font-family: inherit;
     margin-top: 5%;
@@ -179,6 +183,21 @@ footer > h2 {
     margin-right: 5%;
     margin-bottom: 5%;
     text-align: center;
+}
+
+
+#early-work {
+    font-family: 'Nunito', sans-serif;
+    margin-bottom: 15px;
+    
+}
+
+.row2 {
+    display: block;
+    flex-wrap: wrap;
+}   
+.column2 {
+    background-position: center;
 }
 
 /*meetup section styling*/
