--- a/css/style.css
+++ b/css/style.css
@@ -198,6 +198,31 @@ footer > h2 {
 }   
 .column2 {
     background-position: center;
+    margin-left: 16.5%;
+    
+}
+#chronological {
+    text-align: center;
+    margin-left: 10%;   
+    margin-right: 10%;
+    margin-bottom: 5%;
+}
+
+#list {
+    list-style-type: none;
+
+}
+ul lh {
+    font-size: x-large;
+    font-weight: 1000;
+    color: #719B43;
+}
+ul hr {
+    width: 40%;
+    margin-left: 30%;
+}
+li {
+    margin: 15px;
 }
 
 /*meetup section styling*/
