--- a/css/style.css
+++ b/css/style.css
@@ -205,22 +205,29 @@ footer > h2 {
 .row2 {
     display: block;
     flex-wrap: wrap;
+    opacity: 0.83;
+
 }   
 .column2 {
-    background-position: center;
     margin-left: 16.5%;
-    
+}
+
 }
 #chronological {
     text-align: center;
     margin-left: 10%;   
     margin-right: 10%;
-    margin-bottom: 5%;
 }
-
+#order {
+    text-align: center;
+    margin-bottom: -4%;
+    font-family: cursive;
+    color: #888E8E;
+}
 #list {
     list-style-type: none;
-
+    text-align: center;
+    padding: 5%;
 }
 ul lh {
     font-size: x-large;
@@ -312,6 +319,17 @@ form > h2 {
     width: 500px;
     margin-left: 32.5%;
     margin-bottom: 35px;
+}
+#thanks {
+    background-image: url(../assets/images/thanks2.jpeg);
+    height: 750px;
+    width: 70%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    margin-left: 15%;
+    background-blend-mode: darken;
 }
 
 /*media queries*/
