--- a/css/style.css
+++ b/css/style.css
@@ -30,10 +30,12 @@ h1, h3 {
 }
 
 .megan {
-    text-align: justify;
+    text-align: left;
     color: #888E8E;
-    font-size: 20px;
-    margin-top: -25px;
+    font-size: 25px;
+    font-family: 'PT Sans Narrow', sans-serif;
+    margin-top: -10px;
+    text-transform: capitalize;
 }
 
 hr {
@@ -124,16 +126,16 @@ hr {
     
 }
 
-#biography {
+.biography {
     text-align: center;
-    margin-bottom: 8px;
-    margin-top: 2%;
-    
+    margin: 10px;
+    text-decoration: underline;
 }
+
 #robin {
     text-align: center;
     margin: 20px;
-    font-size: larger;
+    font-size: 20px;
 }
  #video {
     display: flex;
@@ -212,7 +214,7 @@ footer > h2 {
     margin-left: 16.5%;
 }
 
-}
+
 #chronological {
     text-align: center;
     margin-left: 10%;   
@@ -334,47 +336,34 @@ form > h2 {
 
 /*media queries*/
 
-/* For large to medium screens sizes from 1200px wide and down */
-@media screen and (max-width: 1200px){
-    #middle-review{
-        width: 65%;
-        height: 1200px;
-        margin: 0 auto;
-    }
-    .hero-outer {
-        width: auto;
-    }
-
-    #biography {
+/* For large to medium screens sizes from 1440px wide and down */
+@media screen and (max-width: 1440px){
+    
+    
+    .biography {
         padding: 30px 0;
         margin-top: 0;
     }
 
-    #reviews {
-        width: auto;
-        padding: 0;
+    .column2 {
+        margin-left: 17%;
     }
-
-    .reviews {
-        clear: both;
-        width: 100%;
-        float: left;
-        padding: 0;
-    }
-
-    #times {
-        width: 100%;
-        clear: both;
-        height: 150px;
-        padding: 0;
-    }
-
+    
+}
+/* For large to medium screens sizes from 1024px wide and down */
+@media screen and (max-width: 1024px) {
+    
     hr {
         display: none;
- }
-    #series {
-        background-image: url('../assets/images/castle.jpeg') no-repeat 50% 50%;
-        height: 300px;
-        width: 100%;
     }
+    header p {
+        max-width: 20%;
+        font-size: 10px;
+        flex: 0 0 50%;
+        margin-left: 3%;
+    }
+   
+
+
+    
 }
