--- a/css/style.css
+++ b/css/style.css
@@ -312,7 +312,7 @@ form > h2 {
 
 /* meetup times*/
 
-#meetup-times {
+.meetup-times {
     list-style-type: none;
     box-sizing: content-box;
     border: 1px solid green;
@@ -322,6 +322,11 @@ form > h2 {
     margin-left: 32.5%;
     margin-bottom: 35px;
 }
+.map {
+    margin-left: 15%;
+}  
+
+/*form dump styles*/
 #thanks {
     background-image: url(../assets/images/thanks2.jpeg);
     height: 750px;
@@ -348,6 +353,10 @@ form > h2 {
     .column2 {
         margin-left: 17%;
     }
+    section iframe {
+        width: 60%;
+        margin-left: 10%;
+    }
     
 }
 /* For large to medium screens sizes from 1024px wide and down */
@@ -362,8 +371,59 @@ form > h2 {
         flex: 0 0 50%;
         margin-left: 3%;
     }
-   
+   .row img {
+       max-height: 400px;
+       max-width: 500px;
+   }
 
+   .row2 {
+       margin-left: -85px;
+   }
+   .meetup-times {
+    border-radius: 2px;
+    box-sizing: border-box;
+    color: gray;
+    font-size: 20px;
+    margin-left: 20%;
+    padding-bottom: 5px;
+    padding-top: 5px;
+    width: 60%;
+   }   
+   section iframe {
+    width: 80%;
+    margin-left: 70px;
+}
+}
+/* For medium to small tablet screens sizes from 768px wide and down */
+@media screen and (max-width: 768px){
+    #menu-bar  {
+        display: flex;
+        flex-direction: column-reverse;
+        float: right;
+        line-height: 5px;
+    }
+    header p {
+        margin-left: 50px;
+        max-width: 30%;
+    }
+    .book-club {
+        display: flex;
+        width: 100%;
+        height: 450px;
+    }
+    section iframe {
+        width: 80%;
+        margin-left: 5px;
+    }
+    #castle {
+        display: flex;
+        width: 100%;
+        height: 450px;
+    }
+    #hero-image {
+        display: flex;
+        width: 100%;
+        height: 450px;
+    }
 
-    
 }
