--- a/css/style.css
+++ b/css/style.css
@@ -471,3 +471,57 @@ form > h2 {
     }
 
 }
+/* For medium to small phone screens sizes from 320 wide and down */
+@media screen and (max-width: 320px){
+    #logo {
+        display: flex;
+        float: inline-end;
+        font-size: xx-large;
+        line-height: 40px;
+    }
+    #menu-bar {
+    display: flex;
+    align-items: end;
+    justify-content: flex-start;
+    margin-top: -30%;
+    font-size: smaller;
+    float: right;
+    padding: 0;
+    line-height: 5px;
+    }
+
+    .megan {
+    font-size: small;
+    margin-left: 5%;
+    margin-bottom: 3px;
+    }
+    .reviews {
+        display: none;
+    }
+    /*bug found when reviews go smaller with screen size, removed from display of mobile phones*/
+
+    #hero-image {
+        display: flex;
+        width: 100%;
+        height: 200px;
+        margin: 0;
+
+    }
+    .row img {
+        height: 100px;
+    }
+    .column-a {
+        position: sticky;
+        top: 5px;
+        left: 5px;
+    }
+    .column-b {
+        position: relative;
+        top: 20px;
+        right: 20px;
+        
+    }
+    
+    
+    
+}
