--- a/css/style.css
+++ b/css/style.css
@@ -474,10 +474,10 @@ form > h2 {
 /* For medium to small phone screens sizes from 320 wide and down */
 @media screen and (max-width: 320px){
     #logo {
-        display: flex;
-        float: inline-end;
-        font-size: xx-large;
-        line-height: 40px;
+    display: flex;
+    float: inline-end;
+    font-size: xx-large;
+    line-height: 40px;
     }
     #menu-bar {
     display: flex;
@@ -496,7 +496,7 @@ form > h2 {
     margin-bottom: 3px;
     }
     .reviews {
-        display: none;
+    display: none;
     }
     /*bug found when reviews go smaller with screen size, removed from display of mobile phones*/
 
@@ -521,7 +521,42 @@ form > h2 {
         right: 20px;
         
     }
-    
-    
-    
+    #video {
+        position: relative;
+        height: 0;
+        padding-bottom: 55%;
+        overflow: hidden;
+    }
+    .social-networks {
+        font-size: 10px;
+    }
+    #castle {
+        display: flex;
+        width: 100%;
+        height: 200px;
+        margin: 0;
+    }
+    .column2 img {
+        width: 100%;
+        margin-left: 10px
+        
+    }
+    .book-club {
+        display: flex;
+        width: 100%;
+        height: 200px;
+        margin: 0;
+    }
+    #enter {
+        font-size: 30px;
+    }
+    input[type=submit] {
+        margin-left: -2px;
+    }
+    .map {
+        position: relative;
+        height: 0;
+        padding-bottom: 55%;
+        overflow: hidden;
+    }
 }
